[package]
name = "mpv-ipc"
version = "0.1.5"
edition = "2021"
description = "Communicate with mpv over JSON IPC"
homepage = "https://github.com/JerwuQu/mpv-ipc-rs"
repository = "https://github.com/JerwuQu/mpv-ipc-rs"
license = "MIT"

[dependencies]
anyhow = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
